--- a/Bestdrive.html
+++ b/Bestdrive.html
@@ -15,7 +15,7 @@
         <input id="bt" type="text" class="hide" name="bt" placeholder="S584123456" size="17" / onblur="creerQRC()">
         <!--<input id="url" type="text" class="hide" name="url" placeholder="Numero de fiche" size="20" / onblur="creerQRC()">-->
         <label for="text"></label>
-        <input id="text" type="text" class="hide" value="lien de fiche" / onblur="generateQRCode()">
+        <input id="text" type="text" class="hide" placeholder="Numero de fiche" / onblur="generateQRCode()">
         <form><input id="RAZ" class="hide" type="submit" value="RAZ"></form>
         <p><input id="rien" type="button" value="Imprimé véhicule"></p>
 
