--- a/Bestdrive.html
+++ b/Bestdrive.html
@@ -49,7 +49,6 @@
         }
     </script>
 
-
     </div>
         </center>
 <!--Incrementation x3-->
@@ -267,7 +266,7 @@
 
     </script>
 <!--Script de generation de QRcode-->
-    //<script>
+    <script>
         function creerQRC() {
       //  var url = document.getElementById("url").value;
       //  var qrcode = 'https://chart.googleapis.com/chart?cht=qr&chl=' + encodeURIComponent(url) + '&chs=200x200&choe=UTF-8&chld=L|0';
